--- a/csgoAbout.html
+++ b/csgoAbout.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	
+		<link href="csgo.css" rel="stylesheet">
 	</head>
 	
 	<body>
 	
 		<div class = "a" >
-			<tr>
-				<td> </td>	<td> </td>	<td> </td>	<td> </td>
-			</tr>
-			
-			<tr>
-				<td> </td>	<td> </td>	<td> </td>	<td> </td>
-			</tr>
-			
-			<tr>
-				<td> </td>	<td> </td>	<td> </td>	<td> </td>
-			</tr>
-			
+		
+		<ul>
+			 <li> <a class="current" href="csgoAbout.html">About</a> </li>
+			 <li> <a class="ex1" href="csgoNews.html">News</a> </li>
+			 <li> <a class="ex1" href="csgoEsports.html">Esports</a> </li>
+			 <li> <a class="ex1" href="csgoPopularity.html">Popularity</a> </li>
+		</ul>
+		
 		</div>
 		
 		<div class = "b">
-			
+		
 		</div>
 		
 	</body>
