--- a/csgoEsports.html
+++ b/csgoEsports.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link href="csgo.css" rel="stylesheet">
+		<link rel="stylesheet" style="text/css" href="csgo.css">
 	</head>
 	
 	<body>
@@ -18,21 +18,25 @@
 		</div>
 		
 		<div class = "b">
+		
+		<div class = "c">
 			<table>
 					
 				<tr>
-					<th> </th>	<th> </th>	<th> </th>	<th> </th>
+					<th> a </th>	<th> b </th>
 				</tr>
 
 				<tr>
-					<td> </td>	<td> </td>	<td> </td>	<td> </td>
+					<td> a </td>	<td> b </td>
 				</tr>
 
 				<tr>
-					<td> </td>	<td> </td>	<td> </td>	<td> </td>
+					<td> a </td>	<td> b </td>
 				</tr>
 
 			</table>	
+		</div>
+		
 		</div>
 		
 	</body>
