--- a/csgoOverview.html
+++ b/csgoOverview.html
@@ -17,6 +17,15 @@
 		
 		<div class = "content">
 			<h1>Overview</h1>
+			
+			<img class = "zoom" src = "CouterStrike.png" height = 200px; width = 400px >
+			
+			<p>
+					Counter-Strike: Global Offensive is a multiplayer first-person shooter video game developed by Valve and Hidden Path Entertainment. It is the fourth game in the Counter-Strike series which first started off as a mod in Half-Life and then was released for Windows, OS X, Xbox 360, and PlayStation 3 in August 2012, while the Linux version was released in 2014.
+			</p>
+			<p>
+					Counter-Strike is often considered a classic as it is old but still popular. There are many features to this game that many other game adopted such as the buy menu for guns and utility and common movement features such as the imfamous Bunnyhop, which is often used to gain move quickly and avoid shots by the opponent.
+			</p>
 		</div>
 		
 	</div>
