--- a/csgoPersonalConnections.html
+++ b/csgoPersonalConnections.html
@@ -15,11 +15,11 @@
 			 <li> <a class="ex1" href="csgoGallery.html">Gallery</a> </li>
 		</ul>
 		
-	
-		
-		
 		<div class = "content">
 			<h1>Personal Connections</h1>
+			<p>
+				Before Counter Strike, I wasn't really into fps games, but when I started playing, I really liked it, and started exporling other shooter games like PubG. But because of CS:GO, I got into this great genre of games
+			</p>
 		</div>
 		
 	</div>
