--- a/csgoGallery.html
+++ b/csgoGallery.html
@@ -16,9 +16,23 @@
 		</ul>
 			
 		<div class = "content">
-		
+			
 				<h1>Gallery</h1>
-				
+				<h2>Common Maps</h2>
+				<ul>
+					<li><img class = "zoom" src = "dust2.jfif" height="250" width="400"></li>
+					<li><img class = "zoom" src = "inferno.jfif" height="250" width="400"></li>
+					<li><img class = "zoom" src = "mirage.jfif" height="250" width="400"></li>
+					<li><img class = "zoom" src = "overpass.png" height="250" width="400"></li>
+					<li><img class = "zoom" src = "militia.png" height="250" width="400"></li>
+					<li><img class = "zoom" src = "office.png" height="250" width="400"></li>
+				</ul>
+				<h2>Some Player Models</h2>
+				<ul>
+					<li><img class = "zoom" src = "ct.jfif" height="250" width="400"></li>
+					<li><img class = "zoom" src = "terriost.jfif" height="250" width="400"></li>
+					<li><img class = "zoom" src = "t.jfif" height="250" width="400"></li>
+				</ul>
 		</div>
 	</div>
 	
