--- a/csgoPersonalConnections.html
+++ b/csgoPersonalConnections.html
@@ -18,7 +18,7 @@
 		<div class = "content">
 			<h1>Personal Connections</h1>
 			<p>
-				Before Counter Strike, I wasn't really into fps games, but when I started playing, I really liked it, and started exporling other shooter games like PubG. But because of CS:GO, I got into this great genre of games
+				Before Counter Strike, I wasn't really into fps games, but when I started playing, I really liked it, and started exporling other shooter games like PubG. But because of CS:GO, I got into this great genre of games. So, it is THE game that got me into shooter games.
 			</p>
 		</div>
 		
